--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "laravel/laravel",
+    "name": "infihex/infihex.no",
     "type": "project",
-    "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "description": "The Infihex Website",
+    "keywords": ["infihex", "laravel", "tailwindcss"],
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
