--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,12 @@
         "laravel"
     ],
     "license": "MIT",
+    "repositories": {
+        "nova": {
+            "type": "composer",
+            "url": "https://nova.laravel.com"
+        }
+    },
     "require": {
         "php": "^8.0.2",
         "akaunting/laravel-language": "^1.0",
@@ -24,7 +30,8 @@
         "spatie/laravel-permission": "^5.5",
         "symfony/http-client": "^6.0",
         "symfony/postmark-mailer": "^6.0",
-        "wire-elements/modal": "^1.0"
+        "wire-elements/modal": "^1.0",
+        "laravel/nova": "~4.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.6",
@@ -75,7 +82,10 @@
     "config": {
         "optimize-autoloader": true,
         "preferred-install": "dist",
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "pestphp/pest-plugin": true
+        }
     },
     "minimum-stability": "dev",
     "prefer-stable": true
