--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
         "alpinejs": "^3.7.1",
         "autoprefixer": "^10.4.0",
         "axios": "^0.26.0",
-        "laravel-mix": "^6.0.41",
         "lodash": "^4.17.19",
         "postcss": "^8.4.5",
         "postcss-import": "^14.0.1",
         "prettier": "^2.5.1",
         "prettier-plugin-tailwindcss": "^0.1.5",
         "tailwindcss": "^3.0.7",
-        "tailwindcss-debug-screens": "^2.2.1"
+        "tailwindcss-debug-screens": "^2.2.1",
+        "vite": "^3.0.2",
+        "laravel-vite-plugin": "^0.6.0"
     }
 }
